# do-notation

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  do-notation.cabal  docker-compose.yml  package.yaml  run-locally.sh
frontend/: board-requests.js  boards.css  create-tickets.css  create-user.css  dom-elements.js  index.html  index.js  login.css  panels.js  requests.js  style.css  tickets.css  user-requests.js
frontend/css/: boards.css  create-column.css  create-user.css  header.css  login.css  style.css  tickets.css
frontend/css/panels/: share-board.css  signup.css
frontend/js/: handlers.js  index.js  page-elements.js  panels.js  rest-requests.js
src/: Controller.hs  Errors.hs  Main.hs
src/Requests/: CreateTicket.hs  CreateUser.hs  DeleteTicket.hs  Login.hs  MoveTicket.hs  UpdateTicket.hs
src/Routes/: CreateBoard.hs  CreateColumn.hs  CreatePassword.hs  CreateTicket.hs  CreateUser.hs  DeleteBoard.hs  DeleteTicket.hs  Health.hs  Login.hs  Logout.hs  MoveTicket.hs  QueryBoard.hs  QueryColumn.hs  QueryTicket.hs  ShareBoard.hs  Shared.hs  Signup.hs  UpdateTicket.hs
src/Security/: AuthToken.hs  Authorisation.hs  Security.hs
src/Storage/: Cassandra.hs  Sqlite.hs  StorageApi.hs
src/Storage/Cassandra/: Common.hs  Connection.hs  Keyspace.hs  Queries.hs  Tables.hs
src/Storage/Sqlite/: SqliteTypes.hs
src/Types/: Board.hs  BoardId.hs  Column.hs  CreateTicket.hs  Json.hs  MoveTicket.hs  Ticket.hs  User.hs
