cabal-version:       2.4

name:                do-notation
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
extra-source-files:  CHANGELOG.md

executable do-notation
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  other-modules:       Controller,
                       Requests.CreateTicket,
                       Requests.MoveTicket,
                       Storage.StorageApi,
                       Storage.Cassandra.Common,
                       Storage.Cassandra.Connection,
                       Storage.Cassandra.Keyspace,
                       Storage.Cassandra.Queries,
                       Storage.Cassandra.Tables,
                       Types.Column,
                       Types.Board,
                       Types.Json,
                       Types.Ticket

  build-depends:       aeson, base, bytestring, cql, cql-io, network, safe, servant-server, split, text, uuid, vector, vector-algorithms, warp
  hs-source-dirs:      src
  default-language:    Haskell2010
