cabal-version:       2.4

name:                do-notation
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
extra-source-files:  CHANGELOG.md

executable do-notation
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  other-modules:       Controller,
                       Requests.CreateTicket,
                       Requests.CreateUser,
                       Requests.DeleteTicket,
                       Requests.Login,
                       Requests.MoveTicket,
                       Requests.UpdateTicket,
                       Routes.CreateTicket,
                       Routes.CreateUser,
                       Routes.DeleteTicket,
                       Routes.Login,
                       Routes.Logout,
                       Routes.MoveTicket,
                       Routes.Shared,
                       Routes.QueryBoard,
                       Routes.QueryColumn,
                       Routes.QueryTicket,
                       Routes.UpdateTicket,
                       Security.AuthToken,
                       Security.Security,
                       Storage.Cassandra.Common,
                       Storage.Cassandra.Connection,
                       Storage.Cassandra.Keyspace,
                       Storage.Cassandra.Queries,
                       Storage.Cassandra.Tables,
                       Storage.StorageApi,
                       Storage.Sqlite,
                       Storage.Sqlite.SqliteTypes,
                       Types.Column,
                       Types.Board,
                       Types.Json,
                       Types.Ticket,
                       Types.User

  build-depends:       aeson,
                       base,
                       binary,
                       bytestring,
                       cookie,
                       cql,
                       cql-io,
                       cryptonite,
                       jwt,
                       memory,
                       network,
                       safe,
                       servant-server,
                       split,
                       sqlite-simple,
                       text,
                       uuid,
                       vector,
                       vector-algorithms,
                       warp
  hs-source-dirs:      src
  default-language:    Haskell2010
