cabal-version:       2.4

name:                do-notation
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
extra-source-files:  CHANGELOG.md

executable do-notation
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  other-modules:       Controller,
                       Errors,
                       Routes.CreateBoard,
                       Routes.CreateColumn,
                       Routes.CreatePassword,
                       Routes.CreateTicket,
                       Routes.DeleteBoard,
                       Routes.DeleteTicket,
                       Routes.Login,
                       Routes.Logout,
                       Routes.MoveTicket,
                       Routes.QueryBoard,
                       Routes.QueryColumn,
                       Routes.QueryTicket,
                       Routes.UpdateTicket,
                       Security.Authorisation,
                       Security.AuthToken,
                       Security.Security,
                       Storage.Cassandra.Common,
                       Storage.Cassandra.Connection,
                       Storage.Cassandra.Keyspace,
                       Storage.Cassandra.Queries,
                       Storage.Cassandra.Tables,
                       Storage.StorageApi,
                       Storage.Sqlite,
                       Storage.Sqlite.SqliteTypes,
                       Types.Board,
                       Types.BoardId,
                       Types.Column,
                       Types.Json,
                       Types.Ticket,
                       Types.User

  build-depends:       aeson,
                       base,
                       binary,
                       bytestring,
                       cookie,
                       cql,
                       cql-io,
                       cryptonite,
                       deepseq,
                       jwt,
                       memory,
                       network,
                       safe,
                       safe-exceptions,
                       servant-server,
                       split,
                       sqlite-simple,
                       text,
                       time,
                       transformers,
                       uuid,
                       vector,
                       vector-algorithms,
                       warp
  hs-source-dirs:      src
  default-language:    Haskell2010
